2003-08-22  Simon Josefsson  <jas@extundo.com>

	* modules/strndup (Makefile.am): Add strndup.h to lib_SOURCES.

2003-08-20  Bruno Haible  <bruno@clisp.org>

	* modules/progname: New file.
	* MODULES.html.sh (func_all_modules): Add progname.

2003-08-18  Paul Eggert  <eggert@twinsun.com>

	* modules/stdbool: Add BUILT_SOURCES.  Prefer $@ to target name
        in makefile rules.

2003-08-17  Simon Josefsson  <jas@extundo.com>

	* modules/argp: Fix autoconf macro name. Add more dependencies.

2003-08-17  Simon Josefsson  <jas@extundo.com>

	* modules/xstrndup: New file.
	* MODULES.html.sh (func_all_modules): Add xstrndup.

2003-08-17  Bruno Haible  <bruno@clisp.org>

	* modules/strndup (Files, Include): Add lib/strndup.h.

2003-08-17  Bruno Haible  <bruno@clisp.org>

	* gnulib-tool (func_create_testdir): Handle gl_USE_SYSTEM_EXTENSIONS
	like AC_GNU_SOURCE.
	* modules/extensions (configure.ac): Comment out the invocation of
	gl_USE_SYSTEM_EXTENSIONS.

2003-08-17  Bruno Haible  <bruno@clisp.org>

	* modules/euidaccess (Files): Add lib/euidaccess.h.

2003-08-16  Paul Eggert  <eggert@twinsun.com>

	Document merge from coreutils.
	* modules/alloca: Append $(ALLOCA_H) to BUILT_SOURCES.
	* modules/fnmatch: Append $(FNMATCH_H) to BUILT_SOURCES.
	* modules/utime: Add m4/utimes-null.m4.

2003-08-15  Paul Eggert  <eggert@twinsun.com>

	Document merge from coreutils.
	* modules/userspec: Depend on posixver.
	* modules/strftime: Depend on tzset.

2003-08-14  Jim Meyering  <jim@meyering.net>

	Merges from coreutils.
	* modules/fnmatch: Use the `$(FNMATCH_H)' notation for AC_REPLACED
	variable names, rather than @FNMATCH_H@.
	* modules/alloca: Likewise for $(ALLOCA_H).

	* modules/fnmatch (fnmatch.h): Use `$@' in the commands, in place of
	the three copies of the literal target, `fnmatch.h'.
	* modules/alloca (alloca.h): Likewise.

2003-08-14  Paul Eggert  <eggert@twinsun.com>

	* modules/tzset: New file.

2003-08-12  Paul Eggert  <eggert@twinsun.com>

	Merge from coreutils.