@@ -1,3 +1,8 @@
+2003-08-31  Simon Josefsson  <jas@extundo.com>
+
+	* modules/timegm: New file.
+	* MODULES.html.sh (func_all_modules): Add timegm.
+
 2003-08-22  Simon Josefsson  <jas@extundo.com>
 
 	* modules/strndup (Makefile.am): Add strndup.h to lib_SOURCES.
